// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Timeline component Should render correctly with default props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-8"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-semibold text-lg"
          >
            00:00
          </span>
          <span
            class="font-semibold text-lg"
          >
            12:00
          </span>
          <span
            class="font-semibold text-lg"
          >
            23:59
          </span>
        </div>
        <div
          class="w-full h-12 bg-(--grey) flex"
        >
          <div
            class="bg-(--grey) h-full"
            style="width: 25%;"
          />
          <div
            class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
            style="width: 5%;"
          />
          <div
            class="bg-(--purple) h-full"
            style="width: 1%;"
          />
          <div
            class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
            style="width: 1%;"
          />
          <div
            class="bg-(--purple) h-full"
            style="width: 1%;"
          />
          <div
            class="bg-(--grey) h-full"
            style="width: 1%;"
          />
          <div
            class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
            style="width: 1%;"
          />
          <div
            class="bg-(--purple) h-full"
            style="width: 1%;"
          />
          <div
            class="bg-(--grey) h-full"
            style="width: 1%;"
          />
          <div
            class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
            style="width: 1%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-8"
    >
      <div
        class="flex flex-row justify-between"
      >
        <span
          class="font-semibold text-lg"
        >
          00:00
        </span>
        <span
          class="font-semibold text-lg"
        >
          12:00
        </span>
        <span
          class="font-semibold text-lg"
        >
          23:59
        </span>
      </div>
      <div
        class="w-full h-12 bg-(--grey) flex"
      >
        <div
          class="bg-(--grey) h-full"
          style="width: 25%;"
        />
        <div
          class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
          style="width: 5%;"
        />
        <div
          class="bg-(--purple) h-full"
          style="width: 1%;"
        />
        <div
          class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
          style="width: 1%;"
        />
        <div
          class="bg-(--purple) h-full"
          style="width: 1%;"
        />
        <div
          class="bg-(--grey) h-full"
          style="width: 1%;"
        />
        <div
          class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
          style="width: 1%;"
        />
        <div
          class="bg-(--purple) h-full"
          style="width: 1%;"
        />
        <div
          class="bg-(--grey) h-full"
          style="width: 1%;"
        />
        <div
          class="bg-(--lime) h-full text-white flex items-center justify-center text-xs"
          style="width: 1%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing Timeline component Should render correctly with no props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-8"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-semibold text-lg"
          >
            00:00
          </span>
          <span
            class="font-semibold text-lg"
          >
            12:00
          </span>
          <span
            class="font-semibold text-lg"
          >
            23:59
          </span>
        </div>
        <div
          class="w-full h-12 bg-(--grey) flex"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-8"
    >
      <div
        class="flex flex-row justify-between"
      >
        <span
          class="font-semibold text-lg"
        >
          00:00
        </span>
        <span
          class="font-semibold text-lg"
        >
          12:00
        </span>
        <span
          class="font-semibold text-lg"
        >
          23:59
        </span>
      </div>
      <div
        class="w-full h-12 bg-(--grey) flex"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
